src/test/resources/30/single/xhtml/invalid/index-notonbody.xhtml
<?xml version="1.0" encoding="UTF-8"?>
<?xml-model href="../../../../../../main/resources/com/adobe/epubcheck/schema/30/idx/idx-xhtml-index.sch" type="application/xml" schematypens="http://purl.oclc.org/dsdl/schematron"?>
<html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops"
    xml:lang="en-US" lang="en-US">
    <head>
        <meta charset="UTF-8" />
        <title>Simplest Index</title>
    </head>

    <body>
        <div>
            <span>   </span>
        </div>
        <div>
            <section epub:type="index">
                <h2>Simplest index</h2>
                <ul epub:type="index-entry-list">
                    <li><span epub:type="index-term">term 1</span>, <a epub:type="index-locator"
                            href="content.xhtml#ch1">1</a></li>
                    <li><span epub:type="index-term">term 2</span>, <a epub:type="index-locator"
                            href="content.xhtml#ch2">2</a></li>
                </ul>
            </section>
        </div>
    </body>
</html>
